# archiver

./: .gitignore  Cargo.toml  README.md  archiver-installer.sh  arv  build.sh  detect-todo.sh  package.json  release.sh
.cargo/: config.toml
.github/workflow/: build.yml
.github/workflows/: build.yml
src/: cli.rs  commands.rs  core.rs  handlers.rs  main.rs  misc.rs  models.rs  traits.rs
src/cli/: archiver_command.rs  args.rs  config_action.rs  operation.rs  short.rs  vault_action.rs
src/commands/: archive.rs  db.rs  list.rs  log.rs  record.rs
src/core/: archive.rs  auto_incr.rs  check.rs  config.rs  list.rs  log.rs  restore.rs  update.rs  vault.rs
src/core/archive/: list.rs  mov.rs  move_to.rs  mv.rs  put.rs  restore.rs  sl.rs
src/core/auto_incr/: archive_id.rs  sl.rs  vault_id.rs
src/core/config/: alias.rs  auto_check_update.rs  command.rs  common.rs  display.rs  sl.rs  update_check.rs  (+2 more)
src/handlers/: archive.rs  config.rs  list.rs  log.rs  put.rs  restore.rs  update.rs  vault.rs
src/misc/: append_entry.rs  auto_incr.rs  confirm.rs  console.rs  constants.rs  consts.rs  containers.rs  dt.rs  field_style.rs  jsonl.rs  map.rs  math_util.rs  no_loss_path.rs  os_str_lossy.rs  paths.rs  rand.rs  set.rs  util.rs  write_entry.rs
src/models/: error.rs  errors.rs  json_serde.rs  serde_custom.rs  serde_json.rs  serde_ndt.rs  types.rs
src/traits/: ensure_option.rs  field_style.rs  get_type.rs  no_loss_path.rs  opt_builder.rs  result_ext.rs  strip_ansi.rs  to_option.rs
tests/: arv_rst.rs  get-ver.sh  log_entry.rs  map.rs  option.rs  strip_ansi_escape.rs
(+52 files in other folders)
