[package]
name = "arv"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
once_cell = "1.21.3"
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
dev = []