[package]
name = "arv"
version = "1.0.2"
authors = ["KasukabeTsumugi <futami16237@gmail.com>"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
json-strip-comments = "1.0.4"
once_cell = "1.21.3"
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
terminal_size = "0.4.2"
vte = "0.15.0"

[features]
dev = []
